# post_ifc_convert_node

./: .gitattributes  .gitignore  Readme.md  package-lock.json  package.json
docker/: Dockerfile
docker/converter/: cmd.js  config.json
samples/AC20-FZK-Haus/: AC20-FZK-Haus.ifc.glb  AC20-FZK-Haus.ifc.xml  AC20-FZK-Haus.smeta5d.xml  model.gltf  objects.json
samples/Duplex_Electrical_20121207/: Duplex_Electrical_20121207.ifc.glb  Duplex_Electrical_20121207.ifc.xml  Duplex_Electrical_20121207.smeta5d.xml  model.gltf  objects.json
samples/PFV-IFC4-V08-1-final/: PFV-IFC4-V08-1-final.ifc.glb  PFV-IFC4-V08-1-final.ifc.xml  PFV-IFC4-V08-1-final.smeta5d.xml  model.gltf  objects.json
samples/circles/: CIRCLES.ifc.glb  CIRCLES.ifc.xml  model.gltf  objects.json
samples/erp-sample/: origin.xml  smeta5d.xml
samples/small-ifc/: origin.xml  origin_objects.json  small-smeta5d.xml
schema-preprocessor/: entities_defs.py  entity_types.py  main.py  psets_defs.py  pyproject.toml  type_helpers.py  units.py  utils.py
src/: cli.js
src/adjust-materials/: index.js
src/convert-xml/: Element.js  Parser.js  index.js  serializers.js  warn-once.js
src/convert-xml/schema/: index.js  unit.js
src/convert-xml/serializers/: accessors.js  index.js
src/convert-xml/serializers/configs/: erp.js  index.js  iv.js  min.js
src/convert-xml/serializers/dicts/: ifc2x3.js  index.js
src/make-gltf-materials-double-sided/: index.js
src/rename-gltf-nodes/: index.js
test/: cli.test.js  convert-samples.js
